syntax = "proto3";

package fortiledger360.v1;

// ============================================================================
// FortiLedger360 :: SCAN PROTOCOL (v1)
// ----------------------------------------------------------------------------
// This file defines the protobuf schema for the real-time vulnerability
// scanning service used throughout the FortiLedger360 platform.
//
//  • All timestamps are RFC-3339-nano UTC strings unless stated otherwise.
//  • Every request MUST carry a tenant_id so that multi-tenant isolation
//    is enforced by downstream infrastructure.
//  • Mutual-TLS client-side certificates convey the authenticated identity;
//    however, we keep tenant_id explicit for auditability and sharding.
//  • Correlation IDs are UUID-v4 strings propagated through the event bus
//    for distributed tracing (OpenTelemetry).
//
//  NOTE:  Any additive or non-compatible change MUST bump the minor/major
//         version of the package (e.g. v1 → v2) to keep wire compatibility.
// ============================================================================

option java_multiple_files  = true;
option java_package         = "com.fortiledger360.proto.v1";
option java_outer_classname = "ScanProto";
option cc_enable_arenas     = true;
option csharp_namespace     = "FortiLedger360.Protos.V1";
option go_package           = "github.com/fortiledger360/protos/fortiledger360/v1;v1";
option objc_class_prefix    = "FLG";
option optimize_for         = CODE_SIZE;
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "FortiLedger360 Scanner gRPC Service"
    version: "1.0.0"
    description: "API contract for all scanner-related interactions."
  }
};

// ---------------------------------------------------------------------------
// ENUMS
// ---------------------------------------------------------------------------

enum ScanType {
  SCAN_TYPE_UNSPECIFIED = 0;
  QUICK                 = 1; // Lightweight port & banner check
  DEEP                  = 2; // Full-stack vulnerability assessment
  COMPLIANCE            = 3; // PCI-DSS / SOC2 / HIPAA ruleset scan
}

enum ScanStatus {
  SCAN_STATUS_UNSPECIFIED = 0;
  QUEUED   = 1;
  RUNNING  = 2;
  PAUSED   = 3;
  SUCCESS  = 4;
  FAILED   = 5;
  CANCELED = 6;
}

// ---------------------------------------------------------------------------
// CORE MESSAGES
// ---------------------------------------------------------------------------

message SecurityScanRequest {
  // Context
  string   tenant_id   = 1  [(validate.rules).string = {min_len: 3, max_len: 64}];
  string   correlation_id = 2  [(validate.rules).string.uuid = true];
  ScanType scan_type   = 3;
  string   strategy_id = 4  [(validate.rules).string = {min_len: 1, max_len: 64}];

  // Target definition (oneof to keep message lean)
  oneof target {
    string hostname    = 10; // FQDN or IPv4/6
    string asset_group = 11; // logical group (k8s namespace, etc.)
  }

  // Optional knobs
  uint32  scan_depth     = 20; // 0 = default, 1-5 scale
  bool    follow_symlinks = 21; // For file-system scans
  map<string, string> metadata = 22; // Freeform tags

  // Priority scheduling (shared infra)
  uint32  priority = 30; // 0-100, higher = faster (SLA bound, throttled)
}

message SecurityScanResponse {
  string     scan_id                = 1;
  ScanStatus initial_status         = 2;
  string     accepted_at            = 3; // RFC-3339-nano
  string     estimated_completion   = 4; // Nullable; server may update later
}

message ScanStatusRequest {
  string tenant_id = 1;
  string scan_id   = 2;
}

message ScanProgress {
  ScanStatus status       = 1;
  uint32     total_tasks  = 2;
  uint32     completed    = 3;
  double     percent      = 4; // 0-100
  string     updated_at   = 5;
  repeated string warnings = 6;
}

message Vulnerability {
  string   cve_id      = 1;
  string   severity    = 2; // CRITICAL, HIGH, MEDIUM, LOW, INFO
  string   title       = 3;
  string   description = 4;
  string   reference   = 5;
  string   affected_resource = 6;
  string   detected_at       = 7;
}

message ScanResultsChunk {
  string               scan_id = 1;
  repeated Vulnerability vulnerabilities = 2;
  bool                 final_chunk = 3;
}

// Cancellation
message CancelScanRequest {
  string tenant_id = 1;
  string scan_id   = 2;
  string reason    = 3;
}

message CancelScanResponse {
  ScanStatus final_status = 1;
  string     updated_at   = 2;
}

// ---------------------------------------------------------------------------
// SCANNER SERVICE DEFINITION
// ---------------------------------------------------------------------------

service ScannerService {
  // Starts a scan. The call returns immediately with assigned scan_id.
  rpc InitiateSecurityScan(SecurityScanRequest) returns (SecurityScanResponse) {
    option (google.api.http) = {
      post: "/v1/{tenant_id}/scans"
      body: "*"
    };
  }

  // Polls status & progress of a running scan.
  rpc GetScanStatus(ScanStatusRequest) returns (ScanProgress) {
    option (google.api.http).get = "/v1/{tenant_id}/scans/{scan_id}/status";
  }

  // Streams incremental results to the caller. Ideal for dashboards.
  rpc StreamScanResults(ScanStatusRequest) returns (stream ScanResultsChunk) {
    option (grpc.streaming) = STREAMING;
  }

  // Cancels an ongoing scan. Outcome depends on server-side state.
  rpc CancelScan(CancelScanRequest) returns (CancelScanResponse) {
    option (google.api.http) = {
      delete: "/v1/{tenant_id}/scans/{scan_id}"
    };
  }
}

// ---------------------------------------------------------------------------
// EXTENSIONS / CUSTOM OPTIONS (OPENAPI, VALIDATION)
// ---------------------------------------------------------------------------

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";   // https://github.com/envoyproxy/protoc-gen-validate

// End of file