syntax = "proto3";

//
// CanvasChain Symphony – Wallet gRPC definitions
//
// This file defines the protobuf messages and gRPC services that power the
// “wallet” micro-service inside the CanvasChain Symphony platform.
//
// The wallet service is responsible for:
//   • Secure key–pair creation and management
//   • Holding fungible tokens (governance, DeFi liquidity, etc. )
//   • Holding references to multi-layer NFTs
//   • Authorising and signing on-chain transactions
//
// NOTE: All timestamps are expressed in UTC using google.protobuf.Timestamp.
//       Monetary values are unsigned integers representing the smallest unit
//       (e.g. “wei”, “satoshi”, “atomic units”) to avoid floating-point issues.
//

package ccs.wallet.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package        = "org.canvaschain.wallet.v1";
option go_package          = "github.com/canvaschain/ccs-proto/gen/wallet/v1;walletv1";

////////////////////////////////////////////////////////////////////////////////
// Enumerations
////////////////////////////////////////////////////////////////////////////////

// Cryptographic curve used for public/private keys & signatures.
enum Curve {
  CURVE_UNSPECIFIED = 0;
  CURVE_ED25519     = 1;
  CURVE_SECP256K1   = 2;
  CURVE_BLS12_381   = 3;
  CURVE_FALCON_1024 = 4; // Experimental, post-quantum.
}

// Generic transaction categories used by the analytics layer.
enum TransactionType {
  TRANSACTION_TYPE_UNSPECIFIED = 0;
  TRANSACTION_TYPE_INTERNAL    = 1;  // Simple token transfer.
  TRANSACTION_TYPE_CONTRACT    = 2;  // Smart-contract interaction.
  TRANSACTION_TYPE_STAKE       = 3;  // PoS / PoI staking.
  TRANSACTION_TYPE_NFT_MINT    = 4;  // Initial NFT mint.
  TRANSACTION_TYPE_NFT_UPDATE  = 5;  // Trait evolution or remix.
}

////////////////////////////////////////////////////////////////////////////////
// Core value objects
////////////////////////////////////////////////////////////////////////////////

message WalletId {
  // Universally unique wallet identifier (UUID v4 as string).
  string value = 1;
}

message Address {
  // Human-readable Bech32 address (checksum included).
  string value = 1;
}

message PublicKey {
  Curve curve = 1;
  bytes key   = 2; // Raw bytes, curve-specific encoding.
}

message Signature {
  Curve curve     = 1;
  bytes signature = 2;
}

// Lightweight error payload that can be attached to streaming messages.
// Regular unary RPC errors travel via gRPC status codes.
message Error {
  uint32                 code    = 1; // gRPC compatible status code.
  string                 message = 2;
  google.protobuf.Any    details = 3;
}

////////////////////////////////////////////////////////////////////////////////
// Wallet model
////////////////////////////////////////////////////////////////////////////////

message Wallet {
  WalletId                    id          = 1;
  string                      owner       = 2; // User identifier (e.g. auth-service UUID).
  PublicKey                   public_key  = 3;
  repeated Address            addresses   = 4; // Multiple network-specific addresses.
  google.protobuf.Timestamp   created_at  = 5;
}

message Balance {
  WalletId  wallet_id = 1;
  string    asset_id  = 2; // Fungible token or NFT collection identifier.
  uint64    amount    = 3; // Smallest unit (no decimals).
  uint32    decimals  = 4; // Display decimals for UI layers.
  string    symbol    = 5; // Ticker symbol (e.g. “CCS”, “gART”).
}

message Transaction {
  string                      tx_hash      = 1;
  TransactionType             type         = 2;
  WalletId                    from_wallet  = 3;
  Address                     to_address   = 4;
  string                      asset_id     = 5;
  uint64                      amount       = 6;
  uint64                      fee          = 7;
  uint64                      nonce        = 8;
  google.protobuf.Timestamp   submitted_at = 9;
}

////////////////////////////////////////////////////////////////////////////////
// Unary RPC Requests / Responses
////////////////////////////////////////////////////////////////////////////////

message CreateWalletRequest {
  string owner = 1;
  Curve  curve = 2;
}

message CreateWalletResponse {
  Wallet wallet       = 1;
  // Optional BIP-39 seed phrase; omitted when HSM-backed.
  repeated string seed_phrase = 2;
}

message GetBalanceRequest {
  WalletId wallet_id = 1;
  string   asset_id  = 2; // If empty, returns native token balance.
}

message GetBalanceResponse {
  Balance balance = 1;
}

message TransferRequest {
  WalletId from_wallet_id = 1;
  string   to_address     = 2;
  string   asset_id       = 3;
  uint64   amount         = 4;
  uint64   fee            = 5;
  uint64   nonce          = 6;
}

message TransferResponse {
  Transaction transaction = 1;
}

message SignDataRequest {
  WalletId wallet_id = 1;
  bytes    payload   = 2;
}

message SignDataResponse {
  Signature signature = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Streaming RPC Requests
////////////////////////////////////////////////////////////////////////////////

// Subscribe to balance changes for a particular wallet.
// Emits a stream of Balance messages; errors are sent via gRPC status codes.
message SubscribeBalancesRequest {
  WalletId wallet_id = 1;
}

// Watch a list of addresses for inbound or outbound transfers.
// Each event either contains a Transaction or an Error in case of problems.
message WatchAddressRequest {
  repeated string addresses = 1;
}

////////////////////////////////////////////////////////////////////////////////
// gRPC Service definition
////////////////////////////////////////////////////////////////////////////////

service WalletService {
  // -------------------------------------------------------------------------
  // Key/Wallet lifecycle
  //--------------------------------------------------------------------------

  // Create a new wallet (local software key or HSM depending on deployment).
  rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse);

  // -------------------------------------------------------------------------
  // State queries
  //--------------------------------------------------------------------------

  // Retrieve balance for a specific asset held by the wallet.
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);

  // Subscribe to real-time balance updates.
  rpc SubscribeBalances(SubscribeBalancesRequest) returns (stream Balance);

  // -------------------------------------------------------------------------
  // Authorisation & signing
  //--------------------------------------------------------------------------

  // Request the wallet service to sign arbitrary data (e.g. EIP-712, typed data).
  rpc SignData(SignDataRequest) returns (SignDataResponse);

  // -------------------------------------------------------------------------
  // Token / NFT transfers
  //--------------------------------------------------------------------------

  // Perform a token transfer; returns the resulting transaction.
  rpc Transfer(TransferRequest) returns (TransferResponse);

  // Watch addresses for activity (both incoming & outgoing).
  rpc WatchAddress(WatchAddressRequest) returns (stream Transaction);
}